--- a/sidebar.css
+++ b/sidebar.css
@@ -106,14 +106,10 @@ body {
   background-color: rgba(255, 255, 255, 0.08);
   padding-left: 28px;
 }
-.menu-item:first-child {
+.menu-item.active {
   background-color: rgba(255, 255, 255, 0.15);
 
   font-weight: 500;
-}
-.menu-item:first-child:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  padding-left: 24px;
 }
 .menu-item i {
   width: 18px;
